fixed overflow-y in the tag search layer

--- a/django-dispensa/wheelie/client/scss/layout/_blog-index.scss
+++ b/django-dispensa/wheelie/client/scss/layout/_blog-index.scss
@@ -8,7 +8,7 @@ body {
   background: rgba(255, 255, 255, 0.9);
   height: 100vh;
   left: -100vw;
-  overflow: scroll;
+  overflow-y: scroll;
   position: fixed;
   top: 0;
   transition: 0.2s ease;
@@ -95,7 +95,7 @@ body {
   @media #{$small}, #{$medium} {
     top: 12px;
   }
-  
+
   &.switch {
     top: -46px;
 
